chore(bazaar): finish routing service logs through tinylog
Six more callsites converted across the bazaar service:
- BazaarMarket match-price trace (debug)
- PendingTransactionsDatabase store/parse error paths
- EndpointBazaarBuyOrder + EndpointBazaarSellOrder order-submitted logs
- EndpointProcessPendingTransactions per-id success/failure
- EndpointCancelBazaarOrder + EndpointGetPendingTransactions

Same severity choices as before — info for state changes a human
would want to see at runtime, debug for per-iteration breadcrumbs,
error for catch-blocks. Drops Collectors.toList in one spot in favour
of Stream.toList().